# sdc-project1-spring2026

./: .gitignore  generate-assignment.sh
data-static/: components-static.json  resource-constraints.json
docs/DeveloperGuide/DynamaticFeaturesAndOptimizations/: StaticScheduling.md
experimental/tools/elastic-miter/: CMakeLists.txt
experimental/tools/handshake-simulator/: CMakeLists.txt
experimental/tools/rigidification/: CMakeLists.txt
include/dynamatic/: InitAllDialects.h
lib/Conversion/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Support/: TimingModels.cpp
lib/Transforms/: CMakeLists.txt
lib/Transforms/StaticScheduling/: ALAPScheduling.cpp  ASAPScheduling.cpp  CMakeLists.txt  GettingStartedPass.cpp  PipelinedScheduling.cpp  ResourceConstraints.cpp  SchedulingIO.cpp  StaticSchedulingILP.cpp  StaticSchedulingPass.cpp  StaticTimingConfig.cpp
static-examples/: getting_started.dyn  static.dyn  static_full.dyn
static-examples/example_1/: example_1.c
static-examples/example_10/: example_10.c
static-examples/example_11/: example_11.c
static-examples/example_12/: example_12.c
static-examples/example_2/: example_2.c
static-examples/example_3/: example_3.c
static-examples/example_4/: example_4.c
static-examples/example_5/: example_5.c
static-examples/example_6/: example_6.c
static-examples/example_7/: example_7.c
static-examples/example_8/: example_8.c
static-examples/example_9/: example_9.c
tools/dynamatic/: dynamatic.cpp
tools/dynamatic-mlir-lsp-server/: CMakeLists.txt
tools/dynamatic-opt/: CMakeLists.txt
(+30 files in other folders)
